Complete create items functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <li><%= link_to "About", about_path %></li>
         <% if user_signed_in? %>
         <li><%= link_to "My User Page", users_show_path %></li>
+        <li><%= link_to "Create To-Dos", new_item_path %></li>
         <% end %>
       </ul>
 
