--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,3 +2,5 @@
 <p><span class="emphasis">Email:</span> <%= current_user.email.capitalize %></p>
 <h4> My To-Do Items: </h4>
 <%= render partial: 'items/item', locals: { item: @item} %>
+
+<h4><%= link_to "Add New To-Do Item", new_item_path %></h4>
