--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,9 +1,18 @@
 <%= form_for [item] do |f| %>
-  <div class="form-group">
+  <% if item.errors.any? %>
+    <div class="alert alert-danger">
+      <h4><%= pluralize(item.errors.count, "error") %>.</h4>
+      <ul>
+        <% item.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <%= form_group_tag(item.errors[:name]) do %>
     <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control', placeholder: "Enter To-Do Item Name" %>
-  </div>
-  <div class="form-group">
+  <% end %>
     <%= f.submit "Save", class: 'btn btn-success' %>
   </div>
 <% end %>
